parse-display/tests/compile_fail/from_str/invalid_with.stderr
error[E0277]: the trait bound `&'static str: FromStrFormat<u8>` is not satisfied
 --> tests/compile_fail/from_str/invalid_with.rs:5:23
  |
5 |     #[from_str(with = "not impl FromStrFormat")]
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromStrFormat<u8>` is not implemented for `&'static str`
  |
  = note: required for the cast from `&&'static str` to `&dyn FromStrFormat<u8, Err = _>`
